[package]
name = "csparse21"
description = "Sparse Matrix Solver"
readme = "readme.md"
license = "BSD-3-Clause"
version = "0.2.3"
authors = [
  "Dan Fritchman <dan@fritch.mn>",
  "Floris Laporte <floris.laporte@gmail.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
num-complex = "0.4.4"

